--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-View2WC *ngIf="isWC2" ></app-View2WC>
 <app-View1WC *ngIf="isWC1" ></app-View1WC>
 <app-View3WC *ngIf="isWC3" ></app-View3WC>
+<app-FactoryView1WC *ngIf="isFactoryView1" ></app-FactoryView1WC>
 
