--- a/src/app/FactoryView1WC/FactoryView1WC.component.css
+++ b/src/app/FactoryView1WC/FactoryView1WC.component.css
@@ -10,13 +10,13 @@
   margin-left: 20px;
 }
 
-
 .Result div{
-    display: inline-block;
     vertical-align: text-top;
+    float: left;
 }
 
 .Result1{
+  padding-top: 0px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: rgba(255,255,255, 1.0);
 	border-radius: 10px;
@@ -28,6 +28,37 @@
 
 th{
   font-size: 24px;
+  position: sticky;
+  top: 0;
+  padding: 10px;
+  background-color: white;
+}
+
+.bottomLine{
+  border-bottom:2px solid #aaa;
+}
+
+.ScorePTnok{
+  background-color: red;
+	color: whitesmoke;
+}
+
+.ScorePTok{
+  background-color: green;
+	color: whitesmoke;
+}
+
+.legend{
+  width: 160px;
+  text-align: center;
+  display: block;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 10px;
+  font-size: 16px;
+  color: black;
+  font-weight: bold;
 }
 
 .ResultScore{
@@ -47,6 +78,7 @@ th{
 }
 
 #Main{
+  float: none;
   position: absolute;
   top: 190px;
   bottom: 150px;
@@ -58,7 +90,8 @@ th{
   margin-top: 10px;
   width: 96%;
   display: block;
-  padding: 10px;
+  padding-top: 0px;
+  overflow: auto;
 }
 
 .clock{
@@ -81,13 +114,23 @@ th{
 }
 
 .tableCss{
-  table-layout: fixed;
+   table-layout: fixed;
   width: 100%;
   height: 100%;
+  position: relative;
+  border-collapse: collapse;
+}
+
+.tableCss th:nth-child(4) {
+  width: 310px;
+}
+
+.tableCss th:nth-child(1) {
+  width: 300px;
 }
 
 tr, td{
-
+  text-align: center;
   margin-top: 1px;
   margin-bottom: 1px;
   margin-left: 1px;
