--- a/src/app/View3WC/View3WC.component.css
+++ b/src/app/View3WC/View3WC.component.css
@@ -77,7 +77,7 @@ margin-bottom: 50px;
 
 .wcName{
   font-size: 96px;
-  color: black;
+  color: white;
   margin-top: 1px;
   float: none;
   margin-bottom: 50px;
